@@ -573,7 +573,6 @@
     "*://*.statista.com/*",
     "*://*.stcatharinesstandard.ca/*",
     "*://*.stocknews.com/*",
-    "*://*.stratfor.com/*",
     "*://*.studocu.com/*",
     "*://*.stylist.co.uk/*",
     "*://*.sudinfo.be/*",
@@ -746,5 +745,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.2.4"
+  "version": "3.2.2.5"
 }
