@@ -5,6 +5,7 @@ Post-release
 Add Groupe ESH Medias (ch)
 Add Zeit.de (link to archive.is)
 Remove LePoint.fr (fix obsolete)
+Remove Stratfor (fix obsolete)
 Fix Beobachter.ch & Handelszeitung.ch
 Fix Foreign Policy (Insider)
 Fix Telegraaf.nl (images)
